refactor: keep boot as server entrypoint